# Livecut-Port

./: README.md  meson.build  meson_options.txt
ports-legacy/: meson.build
ports-legacy/Livecut/: meson.build
ports-legacy/Livecut/source/: Control.h  JuceHeader.h  JucePluginCharacteristics.h  LivecutEditor.cpp  LivecutEditor.h  LivecutLookAndFeel.cpp  LivecutLookAndFeel.h  LivecutProcessor.cpp  LivecutProcessor.h  ParamButton.h  ParamCombo.h  ParamLabel.h  ParamSlider.h  SQPAmp.h
