###############################################################################

if linux_embed
    plugin_srcs = files([
    ])
else
    plugin_srcs = files([
        'source/LivecutProcessor.cpp',
        'source/Control.cpp',
        'source/BBCutter.cpp',
        'source/BitCrusher.cpp',
        'source/Comb.cpp',
        'source/LivecutEditor.cpp',
        'source/SQPAmp.cpp',
        'source/DelayLine.cpp',
        'source/LivecutLookAndFeel.cpp',
        'source/FirstOrderLowpass.cpp',
        'source/Params.cpp',
        'source/ParamButton.cpp',
        'source/ParamSlider.cpp',
        'source/ParamLabel.cpp',
    ])
endif

plugin_name = 'Livecut'

###############################################################################
